# ModelHD

./: .gitignore  README.md  data_vis.ipynb  display_pred.py  generate_dataset.py  model.py  processed_shots_summary.json  pyproject.toml  simple_plasma_processor.py  train.py
